# Eatory-Smart-Assistant

./: .gitignore  LICENSE  README.md  REFACTOR.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  README.md  locustfile.py  menu_translation.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_chat.html
backend/app/: __init__.py  main.py
backend/app/api/: router.py  shared_routes.py
backend/app/clients/: __init__.py  ai_services.py
backend/app/core/: auth.py  config.py  firebase.py  prompts.py  supabase.py
backend/app/features/chat/: __init__.py  routes.py  schemas.py  service.py
backend/app/features/directions/: __init__.py  routes.py  schemas.py  service.py
backend/app/features/imagekit/: __init__.py  routes.py  service.py
backend/app/features/menu_translation/: README.md  __init__.py  client.py  menu_parser.py  menu_pipeline.py  ocr_engine.py  routes.py  schemas.py
backend/app/features/place_details/: __init__.py  routes.py  schemas.py  service.py
backend/app/features/place_images/: __init__.py  routes.py  schemas.py  service.py
backend/app/features/place_search/: README.md  __init__.py  client.py  routes.py  schemas.py  service.py
backend/app/shared/: __init__.py  image_upload.py  refinement.py  schemas.py
backend/tests/: conftest.py  get_test_token.py  test_ai_service_contracts.py  test_llm_service.py  test_ocr_service.py  test_place_details_api.py  test_place_images_api.py  test_place_search_api.py  test_place_search_service.py  test_rag_api.py  test_review_summary_api.py  test_shared_and_menu_api.py
(+320 files in other folders)
