[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=23.0.0",
    "easyocr>=1.7.2",
    "fastapi>=0.135.3",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.26.2",
    "locust>=2.15.0",
    "numpy>=1.26.4",
    "openai>=2.30.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "ruff>=0.1.0",
    "supabase>=2.30.0",
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "uvicorn>=0.44.0",
]
